--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 # Auto detect text files and perform LF normalization
 * text=auto
-*.c linguist-detectable=true
+*.objective-c linguist-vendored=false
