--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
 # Auto detect text files and perform LF normalization
 * text=auto
 *.objective-c linguist-vendored=false
+*.c    linguist-language=C
+*.h    linguist-language=C
